@@ -5,6 +5,11 @@ Please make entries to this log (in addition to the CVS log) that describe
 major changes to the OpenSLP code base.  An entries should be separated by
 blank lines and include the date, developer's email, and change description.
 =============================================================================
+
+02/25/02 matt@caldera.com
+Added patch from Arun Barboza to handle '==' SLPv1 predicates.  This patch
+allows better interoperability with Novell SLP networks.
+
 02/13/02 matt@caldera.com
 Added fix from Arun Barboza to make V1 DAAdverts use the same encoding as
 the request
